name:                la-teletype
version:             0.1.0.0
synopsis:            Extension to Lightarrow for teletype-style text animations
description:
  Text in games is often animated as if it were printed on a
  teletype/teleprinter.  We can represent the essence of this with a signal
  function whose output is a time-varying string.
  .
  This package provides some basic modes for such a signal function.  Generally
  it uses the input signal to determine the speed of typing and when to scroll
  the lines of text to make room for a new line.  The output is generally a
  list of lines and a vector giving the offset at which to draw the lines.
  .
  The most granular modes are exposed, as are more sophisticated combinations.
  These include a mode for filling a certain number of lines and a mode
  for scrolling through an entire paragraph.

homepage:            https://github.com/linearity/la-teletype#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Stuart
maintainer:          alex@das.li
copyright:           2020 Alex Stuart
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:       src
  default-language:     Haskell2010
  exposed-modules:      Lightarrow.Teletype
                        Lightarrow.Teletype.Rows
                        Lightarrow.Teletype.Printer
  default-extensions:   TupleSections
  build-depends:        base >= 4.7 && < 5,
                        bearriver,
                        lightarrow,
                        linear

test-suite teletype
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test,
                        src
    main-is:            TeletypeSpec.hs
    build-depends:      base >= 4.7 && < 5,
                        binary,
                        bearriver,
                        hspec,
                        lightarrow,
                        linear,
                        mtl,
                        optics
    default-extensions: ScopedTypeVariables
                        TupleSections
    other-modules:      Lightarrow.Teletype
                        Lightarrow.Teletype.Rows
                        Lightarrow.Teletype.Printer